--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-</head>
+  <title>test site</title>
+</head> 
 <body>
   <h>lolka</h>
+  <h1>el</h1>
 </body>
 </html>
