--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <title>test site</title>
 </head> 
 <body>
-  <h>lolka</h>
-  <h1>el</h1>
+  <h1>chat log</h1>
+  <hr>
+  <h3>operator: if u say ga and im say y you are ga</h3>
 </body>
 </html>
