--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
+ 
 <html>
-<head>
-  <title>test site</title>
-</head> 
-<body>
-  <h1>chat log</h1>
-  <hr>
-  <h3>operator: if u say ga and im say y you are ga</h3>
-</body>
+
+    <head>
+        <meta charset='UTF-8'>
+        <title>Operator</title>
+        <link href="css/defaultstyle.css" type="text/css" rel="stylesheet">
+ 
+    </head>
+
+    <body>
+
+        <h1>5 8 9 5 8 4 5 1 5 0 2 3</h1>
+        <h1>6 2-9-1 8-5-2-1 5-5-2 1</h1>
+        <h1>3 0-9-1 8-4-4-1 5-2-2 2</h1>
+        <h1>2 9-3-1 8-7-2-1 5-8-2 6</h1>
+        <h1>0 7-4-1 8-8-7-1 5-7-2 5</h1>
+        <h1>1 1 9 1 8 4 0 0 5 4 2 3</h1>
+
+        <script src="js/main.js"></script>
+        <script src="js/sounds.js"></script>
+
+    </body>
+
 </html>
